endpoint / get city by id
