# internal/models/error.go
@@ -1,0 +1,7 @@
+package models
+
+// Error Response
+// @Description Information about error
+type ErrorResponse struct {
+	Message string `json:"message"`
+}
